# philip-trauner.me

./: .dockerignore  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Dockerfile  GitHubBridge.py  Makefile  Pipfile  README.md  app.py  docker-compose.yml  env.py  github_bridge.py  package-lock.json  package.json  pyproject.toml  repl.py  requirements.txt  setup.cfg  spotify_bridge.py  util.py
bridges/: blog.py  github.py  spotify.py
bridges/blog/: __init__.py  base.py  constant.py  container.py  helper.py  license.py  markdown.py  pattern.py  read_time.py  rss.py  time.py  util.py
bridges/blog/fault/: base.py  model.py  post.py
docker/: default.template  entrypoint.sh
docker/app/: Dockerfile  entrypoint.sh
docker/web/: Dockerfile  default.conf
env/template/: app-env-template  env-template
posts/python-quirks-comments/: metadata.json  text.md
posts/three-days-of-owning-a-dell-xps-15/: metadata.json  text.md
src/script/: home.js
src/style/: base.css  blog-post.css  blog-tag.css  home.css
src/template/: base.jinja  blog-post.html  blog-tag.html  blog-tag.jinja  home.html  home.jinja  macros.jinja
static/: base.css  blog-post.css  blog-tag.css  blog.css  home.css  home.js  script.js  style.css
template/: base.jinja  blog-post.jinja  blog-tag.jinja  home.jinja  macros.jinja
templates/: base.html  blog-post.html  blog-tag.html  blog.jinja  home.html  index.html
utils/: github_css_postprocess.py
