[tool.poetry]
name = "philip-trauner.me"
version = "0.1.0"
readme = "README.md"
description = ""
authors = ["Philip Trauner <philip.trauner@arztpraxis.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^2.10"
requests = "^2.19"
sanic = "^18.12.0"
spotipy = "^2.4"
pygments = "^2.2"
watchdog3 = "^0.8.4"
rfeed = { git = "https://github.com/PhilipTrauner/rfeed.git" }
django-htmlmin = "^0.10.0"
urlpath = "^1.1"
voluptuous = "^0.11.5"
markdown = "3.1"
pymdown-extensions = "6.0"
beautifulsoup4 = "^4.6.3"

[tool.poetry.dev-dependencies]
pre-commit = "^1.15"
